# devtools

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-architecture-refactoring/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-UI-SPEC.md  01-VALIDATION.md
.planning/phases/02-testing/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  02-06-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  COVERAGE-WAIVERS.md
.planning/phases/03-uiux/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-UAT.md
.planning/phases/04-ui-ux-bug-fixes/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-HUMAN-UAT.md  04-RESEARCH.md  04-REVIEW.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/research/: RESEARCH.md
docs/superpowers/plans/: 2026-04-29-packaging.md
docs/superpowers/specs/: 2026-04-29-packaging-design.md  2026-04-29-readme-refresh-design.md
icons/: icon.icns
scripts/: make-dmg.sh  make-icons.sh
src/: app.rs  main.rs
src/algo/: asymmetric.rs  hash.rs  mod.rs  oid_defs.rs  pq_kem.rs  pq_signature.rs  registry.rs  symmetric.rs  tool_trait.rs
src/cert/: extensions.rs  mod.rs  oid_resolver.rs
src/cert/fixtures/: README.md  chain.pem  sample.der  sample.p12  sample.pem
src/components/: input.rs  left_menu.rs  mod.rs  tab_bar.rs  ui_helpers.rs
src/tabs/: mod.rs
