[package]
name = "devtools"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { version = "*" }
x509-parser = "0.17"
p12-keystore = "0.1"
rfd = "0.15"
chrono = "0.4"
oid-registry = "0.8"
const-oid = "0.9"

# Symmetric encryption (RustCrypto)
aes = "0.8"
cbc = "0.1"
ecb = "0.1"
sm4 = "0.5"
cipher = "0.4"

# Asymmetric encryption (RustCrypto)
rsa = "0.9"
p256 = "0.13"
ecdsa = "0.16"
rand = "0.8"
rand_core = "0.6"

# Post-quantum crypto (pure Rust)
ml-kem = "0.2"
ml-dsa = "0.1.0-rc.8"
once_cell = "1.19"
base64 = "0.22"

# Hash algorithms
sha2 = "0.10"
sm3 = "0.4"
